Fixed DDL display on small screen

--- a/src/app/components/Section/style.css
+++ b/src/app/components/Section/style.css
@@ -49,12 +49,32 @@
 
       & .select_indicator {
         font-size: 20px;
-        padding: 10px 10px 12px 16px;
+        padding: 10px 23px 12px 16px;
         width: 100%;
         text-align: left;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+        display:inline-block
+      }
+
+      & .select_indicator > span {
+        position: absolute;
+        right: 10px;
+        top: 23px;
+      }
+
+      & .select_indicator + ul {
+        padding-top: 0px;
+        width: 100%;
+      }
+
+      & .select_indicator + ul a {
+        border-top: 1px solid #eee;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        word-wrap: break-word;
+        white-space: normal;
       }
 
       & :global(.dropdown-menu) {
